test-data/unit/check-future.test
-- Test cases for __future__ imports

[case testFutureAnnotationsImportCollections]
# flags: --python-version 3.7
from __future__ import annotations
from collections import defaultdict, ChainMap, Counter, deque

t1: defaultdict[int, int]
t2: ChainMap[int, int]
t3: Counter[int]
t4: deque[int]

[builtins fixtures/tuple.pyi]

[case testFutureAnnotationsImportBuiltIns]
# flags: --python-version 3.7
from __future__ import annotations

t1: type[int]
t2: list[int]
t3: dict[int, int]
t4: tuple[int, str, int]
t5 = list[int]

[builtins fixtures/dict.pyi]

[case testFutureAnnotationsMissing]
# flags: --python-version 3.7

t1: list[int]  # E: "list" is not subscriptable, use "typing.List" instead
t2 = list[int]  # E: "list" is not subscriptable

[builtins fixtures/list.pyi]
